<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/bookGroup">
            <menu>
                <item
                    android:id="@+id/nav_byTitle"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/by_title"/>
                <item
                    android:id="@+id/nav_byAuthor"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/by_author"/>
                <item
                    android:id="@+id/nav_byPublisher"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/by_publisher"/>
            </menu>
        </item>
    </group>

    <item android:title="@string/info">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/about"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>
