<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3F51B5"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ProgressBar
            android:id="@+id/register_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff" />

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_lastname"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff" />

                <EditText
                    android:id="@+id/lastname2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_lastname2"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff" />

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff" />

                <EditText
                    android:id="@+id/controlNumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_control_number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#ffffffff"
                    android:textColorHint="#ffffffff" />

                <!-- Login Button -->

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="#303F9F"
                    android:text="@string/btn_register"
                    android:textColor="#ffffffff"

                    android:textStyle="bold" />

                <!-- Link to Login Screen -->

                <Button
                    android:id="@+id/btnLinkToLoginScreen"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dip"
                    android:background="@null"
                    android:text="@string/btn_link_to_login"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>