<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#306090"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context="com.jimmy.uabcs.bibliouabcs.android.AboutFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logouabcs" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/padding_about"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/version"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#ffffffff" />


    <TextView
        android:id="@+id/copyright_extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/padding_about"
        android:text="@string/copyright_extra"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:textColor="#ffffffff"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/copyright_extra"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:textColor="#ffffffff"
        android:textSize="20dp" />


</RelativeLayout>