<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/uabcsColor"
            android:padding="16dp">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/thumbnail"
                android:layout_width="317px"
                android:layout_height="317px"
                android:gravity="center" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="11dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:text="Lemon peel Base ball"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/authors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="16dp"
                    android:singleLine="true"
                    android:text="M"
                    android:textColor="@android:color/white"
                    android:textSize="12dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:singleLine="true"
                    android:text="@string/no_genre"
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:singleLine="true"
                    android:text="@string/no_publisher"
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:textStyle="italic" />


                <TextView
                    android:id="@+id/isbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:singleLine="true"
                    android:text="@string/no_publisher"
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:orientation="vertical"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/discription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/description"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="13dp"
                        android:textStyle="bold" />


                </LinearLayout>


                <TextView
                    android:id="@+id/discription1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:lineSpacingExtra="4.5dp"
                    android:text="IZINC brings to you this hooded T shirt which will be a great inclusion in your wardrobe. Designed to sartorial perfection, this T shirt is made of premium quality fabric and will let you stay in sheer comfort all day long.this T shirt will be the perfect pick for any occasion."
                    android:textColor="@android:color/black"
                    android:textSize="12.5dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>